fpp_parser/src/tests/embedded-tab.ref.txt
 --> [ local path prefix ]/embedded-tab.fpp:1:1
  |
1 |     
  | ^^^^ syntax error: invalid character '\t'

